# core

./: .gitignore  Dockerfile  Dockerfile.build  LICENSE  MANIFEST.in  README.md  build-and-push.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-push.yml  docs.yml  on_push.yml  publish-npm.yml
docs/: composable-ui.md  index.md  setup.md  tf-module.md
docs/reference/: factory-yaml.md  tf-common.md  tf-data.md  tf-environment.md  tf-guide.md  tf-index.md  tf-llm.md  tf-mcp.md  tf-volumes.md  ui-bar_chart.md  ui-button.md  ui-button_group.md  ui-card.md  ui-code_editor.md  ui-commit_modal.md  ui-common.md  ui-confirm_destructive_modal.md  ui-detail_list.md  ui-file_explorer.md  ui-force_directed.md  ui-guide.md  ui-index.md  ui-kanban.md  ui-layout-primitives.md  ui-lightweight.md  ui-line_chart.md  ui-markdown.md  ui-metrics.md  ui-modal.md  ui-multi_select.md  ui-scatter.md  ui-scope-locked.md  ui-select.md  ui-table.md  ui-tabs.md  ui-text_input.md  ui-textarea.md  ui-tree_editor.md  ui-treemap.md
nodejs/: .gitignore  README.md  index.js  package.json
python/: Dockerfile  Dockerfile.build  MANIFEST.in  README.md  __init__.py  build.sh  default_script.py  pyproject.toml  requirements.txt
python/teenyfactories/: __init__.py  __version__.py  breakpoint.py  bucket_store.py  chat_tools.py  claims.py  collection.py  config.py  cost_clearance.py  db.py  embedding.py  lifecycle.py  mcp.py  query.py  secrets.py  store.py  usage_recorder.py  where_parser.py
python/teenyfactories/llm/: __init__.py  agent.py  base.py  builder.py  caching.py
python/teenyfactories/llm/providers/: __init__.py  anthropic.py  azure_bedrock.py  digitalocean.py  google.py  ollama.py  openai.py  openrouter.py
python/teenyfactories/logging/: __init__.py  logger.py
python/teenyfactories/message_queue/: __init__.py  base.py
python/teenyfactories/message_queue/providers/: __init__.py  postgres.py  redis.py
python/teenyfactories/utils/: __init__.py  ids.py  time.py
python/tests/: test_agent_loop.py  test_claims.py  test_dispatch_strikes.py  test_lifecycle.py  test_mcp_tool_name.py  test_where_parser.py
teenyfactories/: __init__.py  __version__.py  config.py  timer.py
teenyfactories/llm/: base.py
teenyfactories/llm/providers/: anthropic.py  azure_bedrock.py  ollama.py
teenyfactories/logging/: __init__.py  logger.py
teenyfactories/message_queue/: __init__.py  base.py
teenyfactories/message_queue/providers/: __init__.py  postgres.py
