[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teenyfactories"
version = "0.1.0.dev1"
description = "Multi-provider LLM and message queue abstraction for distributed agent systems"
readme = "README.md"
authors = [
    {name = "TeenyFactories Team"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "agent", "distributed", "message-queue", "openai", "anthropic", "redis", "postgres"]

dependencies = [
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "schedule>=1.2.0",
    # PDF text/page extraction (MIT). Permissive replacement for the un-shippable
    # AGPL PyMuPDF/fitz — the AGPL CI license gate blocks fitz from the base image.
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
# LLM providers
openai = ["langchain-openai>=0.0.5"]
anthropic = ["langchain-anthropic>=0.1.0"]
google = ["langchain-google-genai>=0.0.5"]
ollama = ["langchain-community>=0.0.20"]
azure = ["langchain-openai>=0.0.5", "openai>=1.0.0"]

# Message queue providers
redis = ["redis>=4.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]

# All LLM providers
all-llm = [
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "langchain-community>=0.0.20",
    "openai>=1.0.0",
]

# All message queue providers
all-mq = [
    "redis>=4.0.0",
    "psycopg2-binary>=2.9.0",
]

# Data processing
data = [
    "duckdb>=1.0.0",
    "pyyaml>=6.0.0",
]

# Google Drive / Workspace APIs (content_gatherer, video_transcriber).
# google-auth is required alongside the client for the service-account flow
# (`from google.oauth2 import service_account`).
google-drive = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
]

# Audio extraction for transcription agents — ships a self-contained static
# ffmpeg binary (~80 MB) so agents can strip the audio track off large video
# files before sending it to a transcription API (avoids the 25 MB API limit).
# Far lighter than apt `ffmpeg` (~466 MB of codec libs we don't need).
media = ["imageio-ffmpeg>=0.5.0"]

# Everything
all = [
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "langchain-community>=0.0.20",
    "openai>=1.0.0",
    "redis>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "duckdb>=1.0.0",
    "pyyaml>=6.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "imageio-ffmpeg>=0.5.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/teenyfactories/core"
Documentation = "https://github.com/teenyfactories/core/blob/main/README.md"
Repository = "https://github.com/teenyfactories/core"
Issues = "https://github.com/teenyfactories/core/issues"

[tool.setuptools.packages.find]
include = ["teenyfactories*"]

[tool.setuptools.package-data]
teenyfactories = ["py.typed"]
"teenyfactories.llm" = ["llm_pricing.json"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
